Color contrast issue fixed in home page featured product section

--- a/assets/scss/components/foundation/global/_global.scss
+++ b/assets/scss/components/foundation/global/_global.scss
@@ -31,7 +31,8 @@
     }
 
     figcaption {
-        color: $figcaption-color;
+        // color: $figcaption-color;
+        color: #757575;
         font-size: $figcaption-fontSize;
         margin-top: $figcaption-marginTop;
     }
